kubernetes-networks/canary/canary-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default-canary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-web
  namespace: default-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      track: canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      name: canary-web
      labels:
        app: web
        track: canary
    spec:
      containers:
      - name: canary-web
        image: pathfinder177/ki1:web-server
        livenessProbe:
          tcpSocket: { port: 8000 }
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
      nodeSelector:
        kubernetes.io/hostname: k8sworker1
