kubernetes-networks/canary/canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "CanaryHeader"
    nginx.ingress.kubernetes.io/canary-by-header-value: "ItIsCanary"
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: web-svc
            servicePort: 8000
